src/K8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: coding-blog-service
spec:
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    # attaches this service to the deployment
    component: coding-blog
